# nlp-component-suite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/deployment/: development.yaml  production.yaml
configs/model/: mlp.yaml
configs/training/: binary_classification.yaml  default.yaml
examples/: run_api_server.py  simple_mlp.py  train_with_hydra.py
nlp_suite/architectures/: mlp.py
nlp_suite/model_serving/: api.py
nlp_suite/nn_core/: value.py
nlp_suite/training_pipelines/: trainer.py
nlp_suite/visualisation/: gradient_flow.py
tests/e2e/: test_model_training_and_serving.py
tests/integration/: test_model_serving.py  test_training_pipeline.py
tests/unit/: test_value.py
