[project]
name = "nlp-component-suite"
version = "0.1.0"
description = "Extensible Language Modeling Toolkit with modular components"
authors = [
    {name = "Author",email = "author@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "torch (==2.2.1)",
    "numpy (==1.26.3)",
    "typing-extensions (==4.9.0)",
    "tqdm (==4.66.1)",
    "matplotlib (==3.8.2)",
    "pytest (==7.4.4)",
    "hydra-core (==1.3.2)",
    "mlflow (==2.10.2)",
    "pydantic (==2.5.2)",
    "fastapi (==0.110.0)",
    "uvicorn (==0.27.1)",
    "httpx (>=0.28.1)"
]

[tool.poetry]
packages = [
    {include = "nlp_suite"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "24.2.0"
isort = "5.13.2"
flake8 = "7.0.0"
mypy = "1.8.0"
